# survivor-league-app

./: .env.example  .gitignore  README.md  docker-compose.yml  middleware.ts  next.config.js  package-lock.json  package.json  test_imports.py  vercel.json
.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
.next/cache/: .rscinfo  .tsbuildinfo
.next/server/: app-paths-manifest.json  edge-runtime-webpack.js.map  middleware-build-manifest.js  middleware-manifest.json  middleware.js  middleware.js.map  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json
api/: healthz.py  requirements.txt  teams.py
api/auth/: login.py  (+2 more)
app/: layout.tsx
database/: schema.sql
lib/: auth.ts  database.ts
survivor-backend/: .env.example  .env.production  .env.vercel  Dockerfile  pyproject.toml  requirements.txt
survivor-backend/app/: database.py  main.py  models.py  services.py
survivor-backend/tests/: conftest.py  test_admin_controls.py  test_admin_endpoints.py  test_authentication.py  test_buybacks.py  test_comprehensive_scenarios.py  test_file_uploads.py  test_game_results.py  test_game_settings.py  test_leaderboard.py  test_player_management.py  test_profile_management.py  test_redemption_rounds.py  test_weekly_picks.py
survivor-frontend/: .env.production  Dockerfile  index.html  package-lock.json  package.json
survivor-league-nextjs/: package.json
types/: index.ts
(+152 files in other folders)
